--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>首页 · 后台模板 HTML</title>
-    <link rel="stylesheet" href="frame/layui/css/layui.css">
-    <link rel="stylesheet" href="./frame/static/css/style.css">
-    <link rel="icon" href="./frame/static/image/code.png">
+    <link rel="stylesheet" href="static/css/layui.css">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="icon" href="static/image/code.png">
 </head>
 <body>
 
@@ -48,7 +48,7 @@
                 </dl>
             </li>
             <li class="layui-nav-item">
-                <a class="name" href="javascript:;"><img src="./frame/static/image/code.png" alt="logo"> Admin </a>
+                <a class="name" href="javascript:;"><img src="./static/image/code.png" alt="logo"> Admin </a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;" href-url="demo/login.html"><i class="layui-icon">&#xe621;</i>登录页</a></dd>
                     <dd><a href="javascript:;" href-url="demo/map.html"><i class="layui-icon">&#xe621;</i>图表</a></dd>
@@ -115,8 +115,8 @@
 
 <!-- pay -->
 <div class="my-pay-box none">
-    <div><img src="./frame/static/image/zfb.png" alt="支付宝"><p>支付宝</p></div>
-    <div><img src="./frame/static/image/wx.png" alt="微信"><p>微信</p></div>
+    <div><img src="./static/image/zfb.png" alt="支付宝"><p>支付宝</p></div>
+    <div><img src="./static/image/wx.png" alt="微信"><p>微信</p></div>
 </div>
 
 <!-- 右键菜单 -->
@@ -134,8 +134,8 @@
     </table>
 </div>
 
-<script type="text/javascript" src="frame/layui/layui.js"></script>
-<script type="text/javascript" src="./frame/static/js/vip_comm.js"></script>
+<script type="text/javascript" src="static/js/layui.js"></script>
+<script type="text/javascript" src="./static/js/vip_comm.js"></script>
 <script type="text/javascript">
 layui.use(['layer','vip_nav'], function () {
 
