--- a/views/index.html
+++ b/views/index.html
@@ -69,6 +69,7 @@
                         <dd><a href="javascript:;" href-url="demo/btn1.html"><i class="layui-icon">&#xe621;</i>按钮</a></dd>
                         <dd><a href="javascript:;" href-url="demo/form.html"><i class="layui-icon">&#xe621;</i>表单</a></dd>
                         <dd><a href="javascript:;" href-url="demo/scan-hot-key.html"><i class="layui-icon">&#xe621;</i>扫热key</a></dd>
+                        <dd><a href="javascript:;" href-url="demo/noauth_space.html"><i class="layui-icon">&#xe621;</i>未开鉴权集群</a></dd>
                         <dd><a href="javascript:;" href-url="demo/table.html"><i class="layui-icon">&#xe621;</i>表格</a></dd>
                         <dd><a href="javascript:;" href-url="demo/tab-card.html"><i class="layui-icon">&#xe621;</i>选项卡</a></dd>
                         <dd><a href="javascript:;" href-url="demo/progress-bar.html"><i class="layui-icon">&#xe621;</i>进度条</a></dd>
